Change connectTopLevelPort to buffer pins for clk and route script